--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
     "angularfire2": "^2.0.0-beta.5",
+    "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "firebase": "^3.5.1",
     "rxjs": "5.0.0-beta.12",
