--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angularfire2": "^2.0.0-beta.5",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "d3": "^4.3.0",
     "firebase": "^3.5.1",
     "moment": "^2.15.2",
     "rxjs": "5.0.0-beta.12",
@@ -30,6 +31,7 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "@types/d3": "^4.2.38",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.17",
