--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
     "angularfire2": "^2.0.0-beta.5",
+    "animate.css": "^3.5.2",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "d3": "^4.3.0",
