--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "co": "^4.6.0",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "hammerjs": "^2.0.8",
     "mocha": "^3.2.0",
     "mongodb": "^2.2.22",
     "mongoose": "^4.8.1",
