--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "build": "nodemon --exec 'ng build && node server.js'",
     "compile": "node_modules/.bin/ngc -p src/tsconfig-aot.json",
-    "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy-config.json",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
+    "build_server": "nodemon --exec 'ng build && node server.js'",
+    "start_server": "NODE_ENV=dev nodemon --exec 'node server.js'",
     "test_server": "NODE_ENV=test nodemon --exec 'mocha --recursive'"
   },
   "private": true,
