--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "co": "^4.6.0",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "feathers": "^2.0.3",
+    "feathers-errors": "^2.5.0",
+    "feathers-mongoose": "^4.0.1",
+    "feathers-rest": "^1.6.0",
+    "feathers-socketio": "^1.4.2",
     "hammerjs": "^2.0.8",
     "mocha": "^3.2.0",
     "mongodb": "^2.2.22",
@@ -45,7 +50,7 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-beta.30",
+    "@angular/cli": "latest",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
