--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "feathers": "^2.0.3",
+    "feathers-authentication": "^0.7.12",
     "feathers-errors": "^2.5.0",
+    "feathers-hooks": "^1.7.1",
+    "feathers-localstorage": "^1.0.0",
     "feathers-mongoose": "^4.0.1",
     "feathers-rest": "^1.6.0",
     "feathers-socketio": "^1.4.2",
@@ -47,6 +50,7 @@
     "rxjs": "^5.0.3",
     "supertest": "^3.0.0",
     "ts-helpers": "^1.1.1",
+    "uws": "^0.13.0",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
