--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/flex-layout": "^2.0.0-beta.4",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
+    "@angular/common": "^4.0.0-rc.2",
+    "@angular/compiler": "^4.0.0-rc.2",
+    "@angular/core": "^4.0.0-rc.2",
+    "@angular/flex-layout": "^2.0.0-rc.1",
+    "@angular/forms": "^4.0.0-rc.2",
+    "@angular/http": "^4.0.0-rc.2",
+    "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "^4.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "^4.0.0-rc.2",
+    "@angular/router": "^4.0.0-rc.2",
     "assert": "^1.4.1",
     "axios": "^0.15.2",
     "body-parser": "^1.15.2",
@@ -36,7 +36,7 @@
     "feathers-errors": "^2.5.0",
     "feathers-hooks": "^1.7.1",
     "feathers-localstorage": "^1.0.0",
-    "feathers-mongoose": "^4.0.1",
+    "feathers-mongoose": "^5.0.3",
     "feathers-rest": "^1.6.0",
     "feathers-socketio": "^1.4.2",
     "hammerjs": "^2.0.8",
@@ -47,7 +47,7 @@
     "ng2-facebook-sdk": "^1.2.0",
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
-    "rxjs": "^5.0.3",
+    "rxjs": "^5.1.1",
     "supertest": "^3.0.0",
     "ts-helpers": "^1.1.1",
     "uws": "^0.13.0",
@@ -56,19 +56,19 @@
   "devDependencies": {
     "@angular/cli": "latest",
     "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
+    "@types/jasmine": "2.5.43",
+    "@types/node": "^7.0.5",
+    "codelyzer": "~3.0.0-beta.0",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "^5.1.1",
+    "ts-node": "^2.1.0",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "typescript": "^2.2.1"
   }
 }
