--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
     "rxjs": "^5.1.1",
+    "socket.io-client": "^1.7.3",
     "supertest": "^3.0.0",
     "ts-helpers": "^1.1.1",
     "uws": "^0.13.0",
@@ -59,6 +60,11 @@
     "@types/jasmine": "2.5.43",
     "@types/node": "^7.0.5",
     "codelyzer": "~3.0.0-beta.0",
+    "eslint": "^3.17.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.5.0",
